Implementa código das dicas
